# cicd_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
sql/: 001_create_news.sql
src/: config.py  db.py  server.py
tests/: test_mcp_integration.py  test_server.py
