[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "news-mcp-server"
version = "0.1.0"
description = "A FastMCP server that queries PostgreSQL for newsworthy events"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert in non-test code (used for pool guard)

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
